--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">fitFileReader</string>
+    <string name="create_directory">Create Directory</string>
+    <string name="take_data">Take Data</string>
+    <string name="files">Files</string>
 </resources>
