--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="all_trainings">All trainings</string>
 
     <string name="select_your_birthday_date">Click Here To Select Your Birthday Date</string>
+    <string name="bar_chart_heart_rate_header">Heart Rate In Intervals</string>
+    <string name="pie_chart_active_zone">Training Zones</string>
 
 </resources>
