Little fix with language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="create_directory">Create Directory</string>
     <string name="take_data">Take Data</string>
 
-    <string name="general_statistic">General Statistic</string>
+    <string name="general_statistic">General Statistics</string>
     <string name="progres">Progress</string>
     <string name="files">Files</string>
 
